Boards can be added through the Boards form. Cards can be added to the default selected board (Agenda).

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
                 <input name="myboardsInput" class="myboards-input" placeholder="New Board..." type="text" autocomplete="off">
             </form>
             <ul id="myBoards" class="myboards">
-                <li class="myboards-el">First Board</li>
-                <li class="myboards-el">Second Board</li>
             </ul>
         </nav>
 
@@ -43,16 +41,11 @@
                 </form>
                 </div>
                     <ul id="toDoCards" class="column">
-                        <li class="card-el">Test Card 1</li>
-                        <li class="card-el">Test Card 2</li>
+                        <li class="card-el">Add Card above!</li>
                     </ul>
                     <ul id="inProgressCards" class="column">
-                        <li class="card-el">Test Card 3</li>
-                        <li class="card-el">Test Card 4</li>
                     </ul>
                     <ul id="doneCards" class="column">
-                        <li class="card-el">Test Card 5</li>
-                        <li class="card-el">Test Card 6</li>
                     </ul>
             </div>
         </section>
