Modified selectedBoardToView method to display cards in different column positions.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         <input name="cardInput" class="card-input" placeholder="Add Card..." type="text" autocomplete="off">
                     </form>
                     <div class="card-buttons">
-                        <button class="forward-btn">Forward</button>
-                        <button class="backward-btn">Backward</button>
+                        <button id="forwardBtn" class="forward-btn">Forward</button>
+                        <button id="backwardBtn" class="backward-btn">Backward</button>
                     </div>
                 </div>
                 <div class="board-columns">
