Added select Board functionality and refactored code to be more reliant on appData object. Added styling to added boards/cards.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="boardHeader" class="board-header">
                 <h2 class="board-title">First Board</h2>
             </div>
-            <div id="selectedBoardEl" class="board-content">
+            <div id="selectedBoard" class="board-content">
                 <div class="board-tray">
                     <form id="cardForm">
                         <input name="cardInput" class="card-input" placeholder="Add Card..." type="text" autocomplete="off">
@@ -44,6 +44,7 @@
                     <div class="card-buttons">
                         <button id="forwardBtn" class="forward-btn">Forward</button>
                         <button id="backwardBtn" class="backward-btn">Backward</button>
+                        <button id="deleteBtn" class="delete-btn">X</button>
                     </div>
                 </div>
                 <div class="board-columns">
