--- a/index.html
+++ b/index.html
@@ -28,24 +28,26 @@
             <form id="myBoardsForm">
                 <input name="myboardsInput" class="myboards-input" placeholder="New Board..." type="text" autocomplete="off">
             </form>
-            <ul id="myBoards" class="myboards">
+            <ul id="myBoardsEl" class="myboards">
             </ul>
         </nav>
 
         <section class="board">
-            <div id="boardHeader" class="board-header">
-                <h2 id="boardTitle" class="board-title"></h2>
+            <div class="board-tray">
+                <form id="cardForm">
+                    <input name="cardInput" class="card-input" placeholder="Add Card..." type="text" autocomplete="off">
+                </form>
+                <div class="card-buttons">
+                    <button id="forwardBtn" class="forward-btn">Forward</button>
+                    <button id="backwardBtn" class="backward-btn">Backward</button>
+                    <button id="deleteBtn" class="delete-btn">X</button>
+                </div>
             </div>
-            <div id="selectedBoard" class="board-content">
-                <div class="board-tray">
-                    <form id="cardForm">
-                        <input name="cardInput" class="card-input" placeholder="Add Card..." type="text" autocomplete="off">
-                    </form>
-                    <div class="card-buttons">
-                        <button id="forwardBtn" class="forward-btn">Forward</button>
-                        <button id="backwardBtn" class="backward-btn">Backward</button>
-                        <button id="deleteBtn" class="delete-btn">X</button>
-                    </div>
+
+            <div id="selectedBoardEl" class="board-content">
+                <div id="boardHeader" class="board-header">
+                    <h2 id="boardTitle" class="board-title"></h2>
+                    <button class="delete-board-btn pull-right">Delete Board</button>
                 </div>
                 <div class="board-columns">
                     <div class="column">
