Fixed critical UI issue where cards were added to columns and not ULs. Added ability to select a board, add a board, display cards for each board, and add a card.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <div id="boardHeader" class="board-header">
                     <h2 id="selectedBoardTitle" class="board-title"></h2>
                     <button class="board-delete-btn pull-right" data-el-type="boardCardDeleteBtn">Delete Board</button>
+                    <button class="board-add-column-btn pull-right">Add Column</button>
+                    <button class="board-remove-column-btn pull-right">Remove Column</button>
+
                 </div>
                 <div id="boardColumns" class="board-columns">
                     <div class="column">
