Added delete board functionality.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div id="selectedBoardEl" class="board-content">
                 <div id="boardHeader" class="board-header">
                     <h2 id="selectedBoardTitle" class="board-title"></h2>
-                    <button class="board-delete-btn pull-right" data-el-type="boardDeleteBtn">Delete Board</button>
-                    <button class="board-add-column-btn pull-right" data-el-type="addColumnBtn">Add Column</button>
-                    <button class="board-remove-column-btn pull-right" data-el-type="removeColumnBtn">Remove Column</button>
+                    <button class="board-delete-btn pull-right" id="boardDeleteBtn" data-el-type="boardDeleteBtn">Delete Board</button>
+                    <button class="board-add-column-btn pull-right" id="addColumnBtn" data-el-type="addColumnBtn">Add Column</button>
+                    <button class="board-remove-column-btn pull-right" id="removeColumnBtn" data-el-type="removeColumnBtn">Remove Column</button>
                 </div>
                 <div id="cardHeader" class="board-tray">
                     <form id="cardForm">
