Updated Mobile Styling, started change of column names.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
 <body>
     <header class="header">
-        <h1 class="header-title">Task Manager App</h1>
+        <h1 class="header-title">Task Manager App </h1>
+        <button id="boardsExpand" class="boards-expand">+</button>
     </header>
     <main>
-        <nav class="myboards-nav">
+        <nav id="myBoardsNav" class="myboards-nav">
             <h2 class="myboards-header">My Boards</h2>
             <form id="myBoardsForm">
                 <input name="myboardsInput" class="myboards-input" placeholder="New Board..." type="text" autocomplete="off">
